--- a/src/WebAppIdentityMvc/WebAppIdentityMvc.csproj
+++ b/src/WebAppIdentityMvc/WebAppIdentityMvc.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <UserSecretsId>0f2f845e-70ce-41ba-a0f6-8c04f4e72a50</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="SendGrid" Version="9.15.1" />
   </ItemGroup>
 
 </Project>
