adding integration with github

--- a/src/WebAppIdentityMvc/appsettings.json
+++ b/src/WebAppIdentityMvc/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAppIdentityMvcIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebAppIdentityMvc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
